--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+  font-size: 1.2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-page {
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+.login-image {
+  margin: 10px;
+}
+.Images {
+  width: 50%;
+  background-color: #f0f4fc;
+  display: grid;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.login-page-header {
+  font-size: 24px;
+  font-weight: 700;
+  color: #203765;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-para {
+  font-size: 14px;
+  font-weight: 400;
+  color: #203765;
+}
+.form {
+  width: 50%;
+  height: 100vh;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  /* background-color: #203765; */
+}
+.sign-in {
+  font-family: Inter;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #29375f;
+}
+.form-container {
+  margin-top: -15rem;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+input {
+  padding: 5px;
+  margin: 5px;
+  border-radius: 6px;
+  width: 15.5rem;
+  border: 1px solid #c0ceff;
+}
+select {
+  border-radius: 6px;
+  width: 15.5rem;
+  margin-left: 5px;
+}
+.submit-btn {
+  background-color: #fc6964;
+  width: 15.5rem;
+  border-radius: 12px;
+  height: 40px;
+  margin-top: 3rem;
+  margin-left: 5px;
+  color: #ffffff;
+  border: none;
 }
