--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   display: grid;
   align-items: center;
   justify-items: center;
+  text-align: center;
 }
 .login-page-header {
   font-size: 24px;
@@ -35,6 +36,8 @@
   display: grid;
   align-items: center;
   justify-items: center;
+  text-align: center;
+
   /* background-color: #203765; */
 }
 .sign-in {
@@ -73,4 +76,23 @@ select {
   margin-left: 5px;
   color: #ffffff;
   border: none;
+}
+
+.navbar {
+  width: 1446px;
+  background-color: #203765;
+  height: 214px;
+  display: block;
+  align-items: center;
+}
+.nav-hdi {
+  margin-left: 12%;
+  font-size: 2rem;
+  color: #f0f4fc;
+  padding-top: 3%;
+}
+.username {
+  font-weight: bolder;
+  font-size: 2rem;
+  color: #f0f4fc;
 }
