--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
+/*Universal css*/
 * {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
   font-size: 1.2rem;
 }
+/*Login page*/
 .login-page {
   display: flex;
   width: 100%;
   height: 100vh;
 }
+/*Lef-side container*/
 .login-image {
   margin: 10px;
 }
@@ -20,6 +23,8 @@
   justify-items: center;
   text-align: center;
 }
+/*right-side container*/
+
 .login-page-header {
   font-size: 24px;
   font-weight: 700;
@@ -30,6 +35,8 @@
   font-weight: 400;
   color: #203765;
 }
+/*Form styling*/
+
 .form {
   width: 50%;
   height: 100vh;
@@ -78,6 +85,7 @@ select {
   border: none;
 }
 
+/*Admin page1*/
 .navbar {
   width: 1446px;
   background-color: #203765;
