--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-size: 1.2rem;
 }
+.App {
+  overflow-x: hidden;
+}
 /*Login page*/
 .login-page {
   display: flex;
@@ -84,12 +87,25 @@ select {
   color: #ffffff;
   border: none;
 }
+small {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 
 /*Admin page1*/
+.admin-container {
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  border-radius: 5px;
+}
 .navbar {
-  width: 1446px;
+  width: 100%;
   background-color: #203765;
-  height: 214px;
+  height: 30vh;
   display: block;
   align-items: center;
 }
@@ -103,4 +119,33 @@ select {
   font-weight: bolder;
   font-size: 2rem;
   color: #f0f4fc;
+}
+/* .admin-container {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  overflow-y: auto;
+} */
+.side-Navbar {
+  height: max-content;
+  width: 50px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #203765;
+  transition: 0.5s ease;
+  overflow-x: hidden;
+  padding: 20px 10px;
+  display: grid;
+  place-items: center;
+  margin-top: 12%;
+  margin-bottom: 15%;
+  border-radius: 5px;
+}
+a {
+  display: grid;
+  text-align: center;
+}
+.side-nav-img {
+  position: relative;
 }
