--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@ small {
   height: 100vh;
   overflow-y: scroll;
   border-radius: 5px;
+  background-color: #c0ceff;
 }
 .navbar {
   width: 100%;
@@ -132,6 +133,8 @@ small {
   z-index: 1;
   top: 0;
   left: 0;
+  background-color: #c0ceff;
+
   border-radius: 5px;
   background-color: #203765;
   transition: 0.5s ease;
