--- a/src/components/cardfolder/Card.css
+++ b/src/components/cardfolder/Card.css
@@ -28,3 +28,10 @@
 .card-img {
   margin: 0 2px;
 }
+.card-container {
+  box-shadow: 0 5px 5px 5px gray;
+  background-color: #f5f5f7;
+  border-radius: 5px;
+  padding: 5px;
+  height: max-content;
+}
