--- a/src/components/cardfolder/Card.css
+++ b/src/components/cardfolder/Card.css
@@ -27,11 +27,15 @@
 }
 .card-img {
   margin: 0 2px;
+  background-color: #203765;
 }
 .card-container {
   box-shadow: 0 5px 5px 5px gray;
   background-color: #f5f5f7;
   border-radius: 5px;
   padding: 5px;
-  height: max-content;
+  height: 100vh;
+}
+.view-btn {
+  border: none;
 }
