--- a/src/components/cardfolder/Card.css
+++ b/src/components/cardfolder/Card.css
@@ -1,9 +1,9 @@
 .card-details {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  margin: 10px;
-  padding: 2px;
+  align-items: stretch;
+  margin: 2rem;
+  padding: 2rem;
   border-radius: 5px;
   flex-wrap: wrap;
   align-content: center;
@@ -21,13 +21,14 @@
   background-color: #f5f5f7;
 
   gap: 10px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
   border-radius: 5px;
   padding: 5px;
 }
 .card-img {
-  margin: 0 2px;
-  background-color: #203765;
+  margin: 0 12px;
+  padding: 0 2rem;
+  /* background-color: #203765; */
 }
 .card-container {
   box-shadow: 0 5px 5px 5px gray;
@@ -39,4 +40,15 @@
 .view-btn {
   border: none;
   cursor: pointer;
+}
+.image {
+  /* border: 2px dotted black; */
+  background-color: #f5f5f7;
+  border-radius: 50%;
+}
+.card-info {
+  display: grid;
+  justify-content: start;
+  /* align-items: center; */
+  text-align: start;
 }
