Added useState for product file

--- a/src/App.css
+++ b/src/App.css
@@ -174,9 +174,8 @@ main {
   margin: 30px 70px;
 }
 /*Product section*/
-.product-container {
+/* .product-container {
   background-color: #203765;
   color: #c0ceff;
   margin: 10px;
   /* width: auto; */
-}
