--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -1,11 +1,13 @@
-/* .product-container {
+.product-container {
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
+  /* place-items: center; */
   border: 2px solid black;
 
   width: fit-content;
   /* border: 2px solid #203765; */
-/* margin: 30px 70px; */
+}
 .product-details {
   display: flex;
   padding: 10px;
@@ -29,4 +31,21 @@
   border: 1px dotted yellow;
   margin: 2px;
   padding: 3px;
+}
+section {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-top: 5px;
+}
+.product-title {
+  padding: 3px;
+  height: fit-content;
+}
+.product-btn {
+  background-color: transparent;
+  border: 1px solid #203765;
+  border-radius: 5px;
+  cursor: pointer;
 }
