--- a/src/App.css
+++ b/src/App.css
@@ -177,4 +177,7 @@ main {
 .product-align {
   display: flex;
   justify-content: space-between;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1rem;
+  gap: 2rem;
 }
