--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -12,8 +12,8 @@
   align-items: center;
   margin: 10px;
   border: none;
-  border-radius: 5px;
-  background-color: aliceblue;
+  border-radius: 1rem;
+  background-color: #f5f5f7;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
