--- a/src/components/consultation/consultation.css
+++ b/src/components/consultation/consultation.css
@@ -1,14 +1,33 @@
 .consul-header {
-  border: none;
-  border-radius: 1rem;
-  background-color: #f5f5f7;
-  padding: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  margin-top: 5px;
+  margin-bottom: 10px;
 }
 .consul-detail {
   margin-top: 5px;
+}
+.consul-container {
+  padding: 15px;
+
+  border: none;
+  border-radius: 1rem;
+  background-color: #f5f5f7;
+}
+.date-time {
+  border: 1px solid #adadf1;
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.consul-date {
+  display: flex;
+  align-items: center;
+}
+.consul-time {
+  display: flex;
+  align-items: center;
 }
