--- a/src/App.css
+++ b/src/App.css
@@ -113,10 +113,12 @@ small {
   align-items: center;
 }
 .nav-hdi {
-  margin-left: 12%;
+  margin-left: 5%;
   font-size: 2rem;
   color: #f0f4fc;
   padding-top: 3%;
+  display: flex;
+  justify-content: space-between;
 }
 .username {
   font-weight: bolder;
@@ -180,4 +182,8 @@ main {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1rem;
   gap: 2rem;
+}
+
+.username-date {
+  padding-right: 3%;
 }
