--- a/src/components/consultation/consultation.css
+++ b/src/components/consultation/consultation.css
@@ -14,6 +14,7 @@
   border-radius: 1rem;
   background-color: #f5f5f7;
   overflow: hidden;
+  margin: 5px;
 }
 .date-time {
   border: 1px solid #adadf1;
@@ -33,4 +34,10 @@
   margin: 0 auto;
 
   align-items: center;
+}
+.swiper-containers {
+  width: 400px;
+}
+.swiper-side {
+  width: 700px;
 }
