--- a/src/components/consultation/consultation.css
+++ b/src/components/consultation/consultation.css
@@ -9,17 +9,19 @@
   margin-top: 5px;
 }
 .consul-container {
-  padding: 15px;
+  padding: 3px 7px;
+  margin: 0 auto;
   border: none;
   border-radius: 1rem;
   background-color: #f5f5f7;
   overflow: hidden;
-  margin: 5px;
+  /* margin: 5px; */
 }
 .date-time {
   border: 1px solid #adadf1;
   border-radius: 10px;
   padding: 5px;
+  /* margin-top: 10px; */
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -36,8 +38,11 @@
   align-items: center;
 }
 .swiper-containers {
-  width: 400px;
+  width: 420px;
+  margin: 2rem;
 }
-.swiper-side {
-  width: 700px;
+.dots {
+  position: relative;
+  top: 50px;
+  bottom: 0;
 }
